fixing the callout visibility

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -193,6 +193,10 @@ body {
    .perks h2{
      margin-left: 16%;
   }
+
+  #calloutalert {
+    visibility: hidden;
+  }
  
 
    /* ///////////////////// Exercise HTML ///////////////////////// */
